Ignore errors when setting the monitor size fails

Otherwise the front-end application might crash with BadMatch.

https://bugzilla.gnome.org/show_bug.cgi?id=599914